--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Tomo Masakura <tomo.masakura@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "express": "^4.13.4"
+    "cookie-parser": "^1.4.1",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "underscore": "^1.8.3"
   }
 }
