--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "Tomo Masakura <tomo.masakura@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "sqlite3": "^3.1.3",
     "underscore": "^1.8.3"
   }
 }
