--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "devDependencies": {
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "sqlite3": "^3.1.3",
