--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "express-session": "^1.13.0",
     "sqlite3": "^3.1.3",
     "underscore": "^1.8.3"
+  },
+  "dependencies": {
+    "debug": "^2.2.0"
   }
 }
