--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "underscore": "^1.8.3"
   },
   "dependencies": {
-    "debug": "^2.2.0"
+    "debug": "^2.2.0",
+    "express-ws": "^2.0.0-rc.1"
   }
 }
