--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
   "author": "Tomo Masakura <tomo.masakura@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.15.0",
     "cookie-parser": "^1.4.1",
+    "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.0",
@@ -23,11 +29,19 @@
     "eslint-plugin-react": "^5.1.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "file-loader": "^0.9.0",
     "sqlite3": "^3.1.3",
-    "underscore": "^1.8.3"
+    "style-loader": "^0.13.1",
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "express-ws": "^2.0.0-rc.1"
+    "express-ws": "^2.0.0-rc.1",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-router": "^2.5.2"
   }
 }
