--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "dependencies": {
     "debug": "^2.2.0",
-    "express-ws": "^2.0.0-rc.1"
+    "express-ws": "^2.0.0-rc.1",
+    "milkcocoa": "^0.6.0",
+    "usage": "^0.7.1"
   }
 }
