--- a/package.json
+++ b/package.json
@@ -14,24 +14,23 @@
   "author": "Tomo Masakura <tomo.masakura@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "body-parser": "^1.15.0",
-    "cookie-parser": "^1.4.1",
-    "cron": "^1.1.0",
     "eslint": "^2.9.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.0",
     "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-react": "^5.1.1",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
-    "sqlite3": "^3.1.3",
-    "underscore": "^1.8.3"
+    "eslint-plugin-react": "^5.1.1"
   },
   "dependencies": {
-    "cron": "^1.1.0",
-    "debug": "^2.2.0",
-    "express-ws": "^2.0.0-rc.1",
-    "milkcocoa": "^0.6.0",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "cron": "^1.3.0",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "express-ws": "^3.0.0",
+    "milkcocoa": "^0.7.0",
+    "sqlite3": "^3.1.13",
+    "underscore": "^1.8.3",
     "usage": "^0.7.1"
   }
 }
